--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -133,20 +133,19 @@
     "DNA in eukaryotic cells is wrapped around protein cores called nucleosomes. This packaging of DNA plays a crucial role in the regulation of gene expression and other DNA-related processes. \n",
     "\n",
     "The positioning of nucleosomes in yeast relative to its underlying genomic sequence has been computed by [Yuan et al 2005](https://www.ncbi.nlm.nih.gov/pubmed/15961632) using a tiled microarray approach, and is reproduced here in the input files\n",
-    "```unix \n",
+    "```\n",
     "randoProbeInfo.in\n",
     "randoHMMhandCalls.in\n",
     "```\n",
     "I used that data, together with the DNA sequence of a yeast chromosome, contained in the [FASTA format](https://en.wikipedia.org/wiki/FASTA_format) file \n",
-    "```unix \n",
+    "```\n",
     "chr03.fsa,\n",
     "```\n",
     "to compute *linker DNA*: the sequence lying between consecutive nucleosomes. I then extracted coding sequences from the [General Feature Format](https://en.wikipedia.org/wiki/General_feature_format) file \n",
-    "```unix \n",
-    "saccharomyces_cerevisiae_chr03.gff``` \n",
-    "and used them to find promoter regions lying upstream of start codons. Finally, a list of all linker lengths, and of those located immediately upstream of coding sequences, was computed. \n",
-    "\n",
-    "Run the command `./linkers.bash` in the shell to automatically execute a number of Python scripts that perform this analysis. "
+    "```\n",
+    "saccharomyces_cerevisiae_chr03.gff\n",
+    "``` \n",
+    "and used them to find promoter regions lying upstream of start codons. Finally, a list of all linker lengths, and of those located immediately upstream of coding sequences, was computed. "
    ]
   },
   {
