--- a/TFBS.ipynb
+++ b/TFBS.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook lives at [Github](https://github.com/petermchale/yeast_bioinformatics). Follow [these instructions](http://jupyter.readthedocs.io/en/latest/install.html) to execute the Notebook using Python 3.x.  Otherwise, [view this Notebook](http://nbviewer.jupyter.org/github/petermchale/yeast_bioinformatics/blob/master/analysis.ipynb) in read-only mode using [Jupyter Notebook Viewer](http://nbviewer.jupyter.org/).\n",
-    "\n",
-    "# Nucleosome-Transcription Factor competition in yeast\n",
-    "\n",
-    "Written by [Peter McHale](http://ccbs-76.bio.uci.edu/~petermchale/). \n",
-    "\n",
-    "The eukaryotic genome is adorned by large numbers of molecules, including transcription factors (TFs) and  nucleosomes, both of which play important roles in regulating gene expression. These DNA-binding factors compete with one another for binding along the genome, yet many current models of genome binding do not simultaneously consider different types of DNA-binding factors. Additionally, we know from *in vitro* studies that binding can be tuned in a continuous manner by subtle variations in DNA sequence, yet many current models tend to consider positions as being either binding sites or not. \n",
-    "Here, we perform a bioinformatic analysis of published yeast data, highlighting the spectrum of binding propensities of TFs, the statistics of nucleosome positioning, and how the two might interact with one another to co-regulate gene expression in yeast. "
+    "This Notebook lives at [Github](https://github.com/petermchale/yeast_bioinformatics). Follow [these instructions](http://jupyter.readthedocs.io/en/latest/install.html) to execute the Notebook using Python 3.x.  Otherwise, [view this Notebook](http://nbviewer.jupyter.org/github/petermchale/yeast_bioinformatics/blob/master/analysis.ipynb) in read-only mode using [Jupyter Notebook Viewer](http://nbviewer.jupyter.org/)."
    ]
   },
   {
@@ -20,8 +13,11 @@
     "collapsed": true
    },
    "source": [
-    "## Genome-wide TF-DNA binding\n",
-    "TFs bind a small number of target promoters to regulate gene transcription. But do they also bind other genomic locations that do not directly influence transcription rates? To approach this question, we first need to quantify the strength with which TFs bind DNA. Denote by $E(\\vec{s})$ the binding energy of a TF to a sequence \n",
+    "# Transcription Factor-DNA binding in yeast\n",
+    "\n",
+    "Written by [Peter McHale](http://ccbs-76.bio.uci.edu/~petermchale/). \n",
+    "\n",
+    "The eukaryotic genome is adorned by molecules called transcription factors (TFs) that bind a small number of target promoters to regulate gene transcription. But do they also bind other genomic locations that do not directly influence transcription rates? To approach this question, we first need to quantify the strength with which TFs bind DNA. Denote by $E(\\vec{s})$ the binding energy of a TF to a sequence \n",
     "\n",
     "\\begin{equation} \n",
     "\\vec{s} = \\langle s_1, s_2, \\ldots, s_L\\rangle\n",
@@ -40,9 +36,7 @@
     "K(\\vec{s}) \\propto e^{-\\beta E(\\vec{s})} \n",
     "\\end{equation} \n",
     "\n",
-    "for all sequences $\\vec{s}$ that differ in just one nucleotide from a given sequence [[Liang et al 1996](https://www.ncbi.nlm.nih.gov/pubmed/8668194)]. \n",
-    "\n",
-    "To assess the prevalence of TF-DNA binding genome-wide, I used the energy matrix of Gal4 to compute the energy with which it binds each possible sequence in a yeast chromosome:"
+    "for all sequences $\\vec{s}$ that differ in just one nucleotide from a given sequence [[Liang et al 1996](https://www.ncbi.nlm.nih.gov/pubmed/8668194)]. I used the energy matrix of Gal4 to compute the energy with which it binds each possible sequence in a yeast chromosome:"
    ]
   },
   {
