--- a/TFBS.ipynb
+++ b/TFBS.ipynb
@@ -8,6 +8,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modules are now visible to the Notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "repository_directory = os.getcwd() \n",
+    "package_directory = repository_directory + '/source'\n",
+    "import sys\n",
+    "sys.path.append(package_directory)\n",
+    "print('Modules are now visible to the Notebook')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -30,18 +54,278 @@
     "\\end{equation}\n",
     "\n",
     "reducing the impractical problem of determining the large number of values of $E(\\vec{s})$ to the practical problem of the determining the \n",
-    " $L\\times 4$ energy matrix, $\\epsilon_i(s)$. This matrix has been determined experimentally for Gal4 by *in vitro* measurements of the equilibrium binding constants \n",
+    " $L\\times 4$ energy matrix, $\\epsilon_i(s)$. This matrix can be determined for Gal4 using *in vitro* measurements of the equilibrium binding constants \n",
     " \n",
     "\\begin{equation} \n",
     "K(\\vec{s}) \\propto e^{-\\beta E(\\vec{s})} \n",
     "\\end{equation} \n",
     "\n",
-    "for all sequences $\\vec{s}$ that differ in just one nucleotide from a given sequence [[Liang et al 1996](https://www.ncbi.nlm.nih.gov/pubmed/8668194)]. I used the energy matrix of Gal4 to compute the energy with which it binds each possible sequence in a yeast chromosome:"
+    "for all sequences $\\vec{s}$ that differ in just one nucleotide from a given sequence, which I manually fetched from the literature [[Liang et al 1996](https://www.ncbi.nlm.nih.gov/pubmed/8668194)]. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows are positions within a binding site\n",
+      "columns are the identities of nucleotides at those positions\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>C</th>\n",
+       "      <th>G</th>\n",
+       "      <th>T</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.426816</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.132951</td>\n",
+       "      <td>2.957252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.800451</td>\n",
+       "      <td>3.800451</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.800451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.800451</td>\n",
+       "      <td>3.800451</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.800451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.804719</td>\n",
+       "      <td>0.601986</td>\n",
+       "      <td>0.885978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.143841</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>0.143841</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.497866</td>\n",
+       "      <td>1.103637</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.554331</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.609438</td>\n",
+       "      <td>0.693147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.120264</td>\n",
+       "      <td>2.120264</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>1.609438</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.554331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.103637</td>\n",
+       "      <td>1.497866</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>0.143841</td>\n",
+       "      <td>0.693147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.143841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.885978</td>\n",
+       "      <td>0.601986</td>\n",
+       "      <td>0.804719</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>3.800451</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.800451</td>\n",
+       "      <td>3.800451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3.800451</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.800451</td>\n",
+       "      <td>3.800451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2.957252</td>\n",
+       "      <td>3.132951</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.426816</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           A         C         G         T\n",
+       "0   2.426816  0.000000  3.132951  2.957252\n",
+       "1   3.800451  3.800451  0.000000  3.800451\n",
+       "2   3.800451  3.800451  0.000000  3.800451\n",
+       "3   0.000000  0.804719  0.601986  0.885978\n",
+       "4   0.143841  0.000000  0.693147  0.000000\n",
+       "5   0.693147  0.143841  0.693147  0.000000\n",
+       "6   0.000000  1.497866  1.103637  0.000000\n",
+       "7   0.554331  0.000000  1.609438  0.693147\n",
+       "8   0.000000  2.120264  2.120264  0.000000\n",
+       "9   0.693147  1.609438  0.000000  0.554331\n",
+       "10  0.000000  1.103637  1.497866  0.000000\n",
+       "11  0.000000  0.693147  0.143841  0.693147\n",
+       "12  0.000000  0.693147  0.000000  0.143841\n",
+       "13  0.885978  0.601986  0.804719  0.000000\n",
+       "14  3.800451  0.000000  3.800451  3.800451\n",
+       "15  3.800451  0.000000  3.800451  3.800451\n",
+       "16  2.957252  3.132951  0.000000  2.426816"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from extract import createEnergyMatrix\n",
+    "matrix = createEnergyMatrix('data/Gal4_affinity.in')\n",
+    "import pandas as pd \n",
+    "df = pd.DataFrame(matrix)\n",
+    "print('rows are positions within a binding site') \n",
+    "print('columns are the identities of nucleotides at those positions')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "example of a best-binding Gal4 DNA sequence:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0     G\n",
+       "1     A\n",
+       "2     A\n",
+       "3     T\n",
+       "4     G\n",
+       "5     A\n",
+       "6     C\n",
+       "7     G\n",
+       "8     C\n",
+       "9     C\n",
+       "10    G\n",
+       "11    C\n",
+       "12    C\n",
+       "13    A\n",
+       "14    A\n",
+       "15    A\n",
+       "16    C\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('example of a best-binding Gal4 DNA sequence:')\n",
+    "df.idxmax(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'>ref|NC_001135| [org=Saccharomyces cerevisiae] [strain=S288C] [moltype=genomic] [chromosome=III]'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from extract import getFasta\n",
+    "[header, sequence] = getFasta(open('data/chr03.fsa'))\n",
+    "header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's analyze the results:"
+    "I used the energy matrix of Gal4 to compute the energy with which it binds each possible sequence in a yeast chromosome. Here is the distribution of energies so obtained:"
    ]
   },
   {
